# fungtaai

./: .travis.yml  Cargo.toml  README.md  appveyor.yml
src/: generator.rs  lib.rs  pool.rs  traits.rs
tests/: fortuna_aes256_sha256d.rs
